--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "vue": "^1.0.21",
-    "babel-runtime": "^6.0.0"
+    "babel-runtime": "^6.0.0",
+    "vue": "^2.0.0-rc.7",
+    "vue-events": "^2.0.0-beta",
+    "vue-i18n": "^4.5.0",
+    "vue-resource": "^1.0.1",
+    "vue-router": "^2.0.0-rc.5",
+    "vuex": "^2.0.0-rc.5",
+    "vuex-router-sync": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -65,10 +71,9 @@
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.2.0",
-    "vue-html-loader": "^1.0.0",
-    "vue-loader": "^8.3.0",
+    "vue-html-loader": "^1.2.3",
+    "vue-loader": "^9.4.0",
     "vue-style-loader": "^1.0.0",
-    "vuex": "^1.0.0-rc.2",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0",
